--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "rmdir /q /s lib && npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -14,8 +14,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/firestore": "^3.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase": "^7.10.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
